[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Juego.gd" type="Script" id=1]
[ext_resource path="res://scene/Cancha.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Jugador.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/ComponenteEntradasJugador.gd" type="Script" id=4]
[ext_resource path="res://scene/AIEntradaComponente.gd" type="Script" id=5]
[ext_resource path="res://scene/Pelota/Pelota.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/GameOver.tscn" type="PackedScene" id=8]

[node name="Juego" type="Node"]
script = ExtResource( 1 )

[node name="Cancha" parent="." instance=ExtResource( 2 )]

[node name="Jugador" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 256 )

[node name="ComponenteEntradasJugador2" type="Node" parent="Jugador"]
script = ExtResource( 4 )

[node name="Jugador2" parent="." instance=ExtResource( 3 )]
position = Vector2( 974, 256 )

[node name="AIEntradaComponente" type="Node" parent="Jugador2"]
script = ExtResource( 5 )
pelota_path = NodePath("../../Pelota")

[node name="Pelota" parent="." instance=ExtResource( 6 )]
position = Vector2( 512, 256 )
scale = Vector2( 0.359337, 0.279523 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 256 )
current = true
zoom = Vector2( 1.2, 1 )

[node name="TimerInicial" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="GameOver" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="arco_derecho" from="Cancha" to="." method="_on_Cancha_arco_derecho"]
[connection signal="arco_izquierdo" from="Cancha" to="." method="_on_Cancha_arco_izquierdo"]
[connection signal="timeout" from="TimerInicial" to="." method="_on_TimerInicial_timeout"]
[connection signal="jugar_de_nuevo" from="GameOver" to="." method="_on_GameOver_jugar_de_nuevo"]
[connection signal="salir" from="GameOver" to="." method="_on_GameOver_salir"]
